--- a/example.tex
+++ b/example.tex
@@ -3,18 +3,13 @@
 % !TeX program = lualatex
 % !BIB program = biber
 
-\documentclass[british, aspectratio=169]{beamer}
+\documentclass[ngerman, aspectratio=169]{beamer}
 \usepackage{polyglossia} \setdefaultlanguage{german}
 
 \usepackage{fontspec} \setsansfont{Noto Sans} \setmonofont{Noto Mono}
 \usepackage{unicode-math}
-% \usepackage{luacode}
 
-% \usepackage[sfdefault]{roboto}
-
-
-
-\usepackage{../theme/beamerthemefrisbeesportverband}
+\usetheme{frisbeesportverband}
 
 \title{Frisbeesportverband Beamer Theme}
 \date{\today}
@@ -27,22 +22,27 @@
 \end{frame}
 
 \begin{frame} 
-  \frametitle{There Is No Largest Prime Number, or is there?} 
-  \framesubtitle{The proof uses \textit{reductio ad absurdum}.} 
-  \begin{theorem}
-    There is no largest prime number. \end{theorem} 
+  \frametitle{Blocks, enumerates and a long title} 
+  \begin{block}{\centering Theorem}
+    There is no largest prime number.
+  \end{block} 
+
   \begin{enumerate} 
   \item<1-| alert@1> Suppose $p$ were the largest prime number. 
   \item<2-> Let $q$ be the product of the first $p$ numbers. 
   \item<3-> Then $q+1$ is not divisible by any of them. 
-  \item<1-> But $q + 1$ is greater than $1$, thus divisible by some prime
+  \item<4-> But $q + 1$ is greater than $1$, thus divisible by some prime
     number not in the first $p$ numbers.
   \end{enumerate}
 \end{frame}
 
-\begin{frame}{A shorter title}
+\begin{frame}
+  \frametitle{A shorter title}
   \begin{itemize}
   \item one
+    \begin{itemize}
+    \item one.one
+    \end{itemize}
   \item two
   \end{itemize}
 \end{frame}
