• Themed blocks • Themed lists • Fixed "undefined controlsequence \insertframetitle"

--- a/beamercolorthemefrisbeesportverband.sty
+++ b/beamercolorthemefrisbeesportverband.sty
@@ -1,19 +1,31 @@
 \mode<presentation>
 
+% Colors
 \definecolor{dfvblue}{RGB}{52,0,204}
 \definecolor{dfvbluealt}{RGB}{32,0,128}
 \definecolor{dfvgrey}{RGB}{204,204,204}
 
-% Settings
+% Titlepage
 \setbeamercolor{title page header}{fg=black}
 \setbeamercolor{author}{fg=black}
 \setbeamercolor{title}{fg=black}
 \setbeamercolor{date}{fg=black}
 
+% Header
 \setbeamercolor{frametitle}{bg=dfvbluealt,fg=white}
 \setbeamercolor{logo}{bg=white}
 \setbeamercolor{author in head/foot}{bg=dfvblue,fg=white}
 \setbeamercolor{title in head/foot}{bg=dfvbluealt,fg=white}
 
-\mode
-<all>
+% Blocks
+\setbeamercolor{block title}{bg=dfvbluealt,fg=white}
+\setbeamercolor{block body}{bg=dfvgrey,fg=black}
+
+% Lists
+\setbeamercolor{itemize item}{bg=white,fg=dfvbluealt}
+\setbeamercolor{itemize subitem}{bg=white,fg=dfvblue}
+\setbeamercolor{enumerate item}{bg=white,fg=dfvbluealt}
+\setbeamercolor{enumerate subitem}{bg=white,fg=dfvblue}
+\setbeamercolor{item}{bg=white,fg=dfvbluealt}
+
+\mode<all>
