--- a/beamerthemefrisbeesportverband.sty
+++ b/beamerthemefrisbeesportverband.sty
@@ -14,6 +14,6 @@
 \usecolortheme{frisbeesportverband}
 
 \setbeamertemplate{navigation symbols}{}
-\setbeamertemplate{blocks}[rounded][shadow=true]  
+\setbeamertemplate{blocks}[default]
 
 \mode<all>
