--- a/beamerouterthemefrisbeesportverband.sty
+++ b/beamerouterthemefrisbeesportverband.sty
@@ -2,6 +2,8 @@
 
 \newcommand{\headerheight}{1.5cm}
 
+\providecommand\insertframetitle{} 
+
 \defbeamertemplate*{frametitle}{frisbeesportverband}{}
 
 % Frame title
