Themed some toc items.

--- a/beamercolorthemefrisbeesportverband.sty
+++ b/beamercolorthemefrisbeesportverband.sty
@@ -17,6 +17,10 @@
 \setbeamercolor{title}{fg=black}
 \setbeamercolor{date}{fg=black}
 
+% TOC
+\setbeamercolors{section in toc}{parent=palette primary}
+\setbeamercolors{subsection in toc}{parent=palette secondary}
+
 % Header
 \setbeamercolor{frametitle}{bg=dfvbluealt,fg=white}
 \setbeamercolor{logo}{bg=white}
